--- a/system/templates/pinwu/css/main.css
+++ b/system/templates/pinwu/css/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-body{margin:0px; padding:0px; font-size:12px; font-family:"微软雅黑"; color:#555; padding-left:180px; background:#282E37;}
+body{margin:0px; padding:0px; font-size:12px; font-family:"微软雅黑"; color:#555; padding-left:180px; background:#282E37;width:1258px;}
 a{color:#555;}
 img{border:0px;}
 a:link {text-decoration: none;}
